# pyGoogleDriveFiles

./: LICENSE  Pipfile  README.md  pyproject.toml
docs/: conf.py  getting-started.rst  index.rst  reference.rst  requirements.txt
googledrive/: __init__.py  _files.py  _service.py
tests/: test_files.py
